--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="btn">
       <button id="btn">Move car</button>
     </div>
+    <h1>Hello JavaScript</h1>
     <script src="js/index.js"></script>
   </body>
 </html>
